---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/struct.rs
description: Rejects unknown keys in struct objects
expression: "{\"#struct\": {}, \"unknown\": {\"#literal\": \"value\"}}"
---
[31m[parser::object::unknown-key] Error:[0m Unknown or unsupported object key
   ╭─[ <unknown>:1:17 ]
   │
 1 │ {"#struct": {}, "unknown": {"#literal": "value"}}
   │                 ────┬────  
   │                     ╰────── Replace `unknown` with a valid key
   │ 
   │ Help: This J-Expr object only accepts these specific keys: `#type`
───╯
